traces/bug_630.txt
src/medit/stream.c:823: error: DEAD_STORE
  The value written to &norm (type double) is never used.
Showing all 1 steps of the trace


src/medit/stream.c:823:3: Write of unused value
821.     k = locateTetra(mesh,k,++mesh->mark,xp2,cb);
822.     if ( !k )  return(0);
823.     norm = field3DInterp(mesh,k,cb,v2);
         ^
824.     pt = &mesh->tetra[k];
825.     pt->cpt--;
